--- a/v02/canvas/index.html
+++ b/v02/canvas/index.html
@@ -6,7 +6,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	</head>
 	<body>
-		<canvas id="myCanvas" width="200" height="100" style="border:1px solid #c3c3c3;">
+		<canvas id="myCanvas1" width="200" height="100" style="border:1px solid #c3c3c3;">
 			Your browser does not support the HTML5 canvas tag.
 		</canvas>
 
@@ -41,34 +41,34 @@
 		</canvas>
 
 		<script>
-			var c = document.getElementById("myCanvas");
+			var c = $("#myCanvas1").get(0);
 			var ctx = c.getContext("2d");
 			ctx.fillStyle = "#FF0000";
 			ctx.fillRect(0, 0, 150, 75);
 
-			var c = document.getElementById("myCanvas2");
+			var c = $("#myCanvas2").get(0);
 			var ctx = c.getContext("2d");
 			ctx.moveTo(0, 0);
 			ctx.lineTo(200, 100);
 			ctx.stroke();
 
-			var c = document.getElementById("myCanvas3");
+			var c = $("#myCanvas3").get(0);
 			var ctx = c.getContext("2d");
 			ctx.beginPath();
 			ctx.arc(95, 50, 40, 0, 2 * Math.PI);
 			ctx.stroke();
 
-			var c = document.getElementById("myCanvas4");
+			var c = $("#myCanvas4").get(0);
 			var ctx = c.getContext("2d");
 			ctx.font = "30px Arial";
 			ctx.fillText("Hello World", 10, 50);
 
-			var c = document.getElementById("myCanvas5");
+			var c = $("#myCanvas5").get(0);
 			var ctx = c.getContext("2d");
 			ctx.font = "30px Arial";
 			ctx.strokeText("Hello World", 10, 50);
 
-			var c = document.getElementById("myCanvas6");
+			var c = $("#myCanvas6").get(0);
 			var ctx = c.getContext("2d");
 
 			// Create gradient
@@ -80,7 +80,7 @@
 			ctx.fillStyle = grd;
 			ctx.fillRect(10, 10, 150, 80);
 
-			var c = document.getElementById("myCanvas7");
+			var c = $("#myCanvas7").get(0);
 			var ctx = c.getContext("2d");
 
 			// Create gradient
@@ -92,9 +92,9 @@
 			ctx.fillStyle = grd;
 			ctx.fillRect(10, 10, 150, 80);
 
-			var c = document.getElementById("myCanvas8");
+			var c = $("#myCanvas8").get(0);
 			var ctx = c.getContext("2d");
-			var img = document.getElementById("scream");
+			var img = $("#scream").get(0);
 			ctx.drawImage(img, 10, 10);
 		</script>
 	</body>
